<resources>
    <string name="app_name">Mandiri Tangerang Service</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_maps_kab_balaraja">Map</string>
    <string name="title_activity_maps3">Map</string>
    <string name="title_activity_maps_kab_cikupa">Map</string>
    <string name="title_activity_maps_kab_citra">Map</string>
    <string name="title_activity_maps_kab_curug">Map</string>
    <string name="title_activity_maps_kab_kosambi">Map</string>
    <string name="title_activity_maps_kab_kemis">Map</string>
    <string name="title_activity_maps_kab_kotbum">Map</string>
    <string name="title_activity_maps_kota_bandara">Map</string>
    <string name="title_activity_maps_kota_borobudur">Map</string>
    <string name="title_activity_maps_kota_ahmad">Map</string>
    <string name="title_activity_maps_kota_cikokol">Map</string>
    <string name="title_activity_maps_kota_ciledug">Map</string>
    <string name="title_activity_maps_kota_daan">Map</string>
    <string name="title_activity_maps_kota_duta">Map</string>
    <string name="title_activity_maps_kota_gedung">Map</string>
    <string name="title_activity_maps_kota_jati">Map</string>
    <string name="title_activity_maps_kota_kisamaun">Map</string>
    <string name="title_activity_maps_kota_merdeka">Map</string>
    <string name="title_activity_maps_kota_pinangsia">Map</string>
    <string name="title_activity_maps_kota_poris">Map</string>
    <string name="title_activity_maps_kota_ps_poris">Map</string>
    <string name="title_activity_maps_kota_selapajang">Map</string>
    <string name="title_activity_maps_kota_taman">Map</string>
    <string name="title_activity_maps_kota_tangcity">Map</string>
    <string name="title_activity_maps_tang_alsut">Map</string>
    <string name="title_activity_maps_tang_bintaro">Map</string>
    <string name="title_activity_maps_tang_bintaro3">Map</string>
    <string name="title_activity_maps_tang_bsd">Map</string>
    <string name="title_activity_maps_tang_bumi">Map</string>
    <string name="title_activity_maps_tang_ciputat">Map</string>
    <string name="title_activity_maps_tang_ciputat_center">Map</string>
    <string name="title_activity_maps_tang_cirendeu">Map</string>
    <string name="title_activity_maps_tang_gading">Map</string>
    <string name="title_activity_maps_tang_graha">Map</string>
    <string name="title_activity_maps_tang_graha_bintaro">Map</string>
    <string name="title_activity_maps_tang_itc">Map</string>
    <string name="title_activity_maps_tang_jurangmangu">Map</string>
    <string name="title_activity_maps_tang_mall">Map</string>
    <string name="title_activity_maps_tang_pamsil">Map</string>
    <string name="title_activity_maps_tang_pamulang">Map</string>
    <string name="title_activity_maps_tang_paris">Map</string>
    <string name="title_activity_maps_tang_pd_cabe">Map</string>
    <string name="title_activity_maps_tang_rs">Map</string>
    <string name="title_activity_maps_tang_sarua">Map</string>
    <string name="title_activity_maps_tang_serpong">Map</string>
    <string name="title_activity_maps_tang_summarecon">Map</string>
    <string name="title_activity_maps_tang_villa">Map</string>
    <string name="title_activity_maps_kota_bumi">Map</string>
    <string name="title_activity_maps_kota_cbd">Map</string>
    <string name="newskab_kotbum">Mandiri KCP Tangerang Pasar Kutabumi</string>
    <string name="newskab_cikupa">Mandiri KCP Tangerang Cikupa</string>
    <string name="newskab_balaraja">Mandiri KCP Tangerang Balaraja</string>
    <string name="newskab_curug">Mandiri KCP Tangerang Curug</string>
    <string name="newskab_kosambi">Mandiri KCP Tangerang Mutiara Kosambi</string>
    <string name="newskab_kemis">Mandiri KCP Tangerang Pasar Kemis</string>
    <string name="newskab_citra">Mandiri KCP Tangerang Citra Raya</string>
    <string name="newskota_ahmad">Mandiri KCP Tangerang Ahmad Yani</string>
    <string name="newskota_bandara">Mandiri Cash Outlet Tangerang Bandara Terminal 3</string>
    <string name="newskota_borobudur">Mandiri KCP Tangerang Taman Borobudur</string>
    <string name="newskota_bumi">Mandiri KCP Tangerang Bumi Permata Indah</string>
    <string name="newskota_cbd">Mandiri KCP Tangerang Ciledug CBD</string>
    <string name="newskota_cikokol">Mandiri KCP Tangerang Cikokol</string>
    <string name="newskota_ciledug">Mandiri KCP Tangerang Ciledug CBD</string>
    <string name="newskota_daan">Mandiri KCP Tangerang Daan Mogot</string>
    <string name="newskota_duta">Mandiri Cash Outlet Tangerang Duta Garden</string>
    <string name="newskota_gedung">Mandiri Cash Outlet Tangerang Gedung Manajemen Garuda</string>
    <string name="newskota_jati">Mandiri KCP Tangerang Pasar Jati Uwung</string>
    <string name="newskota_kisamaun">Mandiri KC Tangerang Ki Samaun</string>
    <string name="newskota_merdeka">Mandiri KCP Tangerang Merdeka</string>
    <string name="newskota_pinangsia">Mandiri KCP Tangerang Pinangsia Karawaci</string>
    <string name="newskota_poris">Mandiri Cash Outlet Tangerang Poris Business</string>
    <string name="newskota_psporis">Mandiri KCP Tangerang Pasar Poris</string>
    <string name="newskota_selapajang">Mandiri Cash Outlet Tangerang BNP2TKI Selapajang</string>
    <string name="newskota_taman">Mandiri Cash Outlet Tangerang Taman Niaga Soewarna</string>
    <string name="newskota_tangcity">Mandiri KCP Tangerang City</string>
    <string name="newstang_alsut">Mandiri KCP Tangerang Alam Sutera</string>
    <string name="newstang_bintaro">Mandiri KCP Tangerang Bintaro</string>
    <string name="newstang_bintaro3">Mandiri KCP Tangerang Bintaro Sektor III</string>
    <string name="newstang_bsd">Mandiri Cash Outlet Tangerang BSD Modern</string>
    <string name="newstang_bumi">Mandiri KCP Tangerang Bumi Serpong Damai</string>
    <string name="newstang_ciputat">Mandiri KCP Tangerang Pasar Ciputat</string>
    <string name="newstang_ciputatcenter">Mandiri KCP Tangerang Ciputat Center</string>
    <string name="newstang_cirendeu">Mandiri KCP Tangerang Selatan Cirendeu</string>
    <string name="newstang_gading">Mandiri KCP Tangerang Gading Serpong</string>
    <string name="newstang_graha">Mandiri KCP Tangerang Graha Karnos</string>
    <string name="newstang_grahabintaro">Mandiri KCP Tangerang Graha Bintaro</string>
    <string name="newstang_itc">Mandiri KCP Tangerang ITC BSD</string>
    <string name="newstang_jurangmangu">Mandiri Cash Outlet Tangerang Jurangmangu</string>
    <string name="newstang_mall">Mandiri KCP Tangerang Mall Alam Sutera</string>
    <string name="newstang_pamsil">Mandiri KCP Tangerang Pamulang Siliwangi</string>
    <string name="newstang_pamulang">Mandiri KCP Tangerang Pamulang</string>
    <string name="newstang_paris">Mandiri KCP Tangerang Paris Square BSD</string>
    <string name="newstang_pdcabe">Mandiri KCP Tangerang Pondok Cabe Mutiara</string>
    <string name="newstang_rs">Mandiri Cash Outlet Tangerang R.S. Eka BSD</string>
    <string name="newstang_sarua">Mandiri KCP Tangerang Sarua</string>
    <string name="newstang_serpong">Mandiri KCP Tangerang Serpong</string>
    <string name="newstang_summarecon">Mandiri KCP Tangerang Summarecon Gading Serpong</string>
    <string name="newstang_villa">Mandiri KCP Tangerang Villa Melati Mas</string>
    <string name="lockab_kotbum">Pasar Kutabumi Blok E-3 No. 19 Kabupaten Tangerang</string>
    <string name="lockab_cikupa">Pertokoan Cikupa Blok B No.3, Jl. Raya Serang Km. 14,8</string>
    <string name="lockab_balaraja">Ruko Ultimate Blok E-F, Jalan Raya Serang KM. 24, Balaraja</string>
    <string name="lockab_curug">Jl. Raya Curug Rt.02,Rw.04, Curug Kulon</string>
    <string name="lockab_kosambi">Kawasan Pergudangan Mutiara Kosambi 2 Blok A No.11</string>
    <string name="lockab_kemis">Pertokoan Kutajaya, Pasar Kemis, Blok A Nomor 3, Tangerang</string>
    <string name="lockab_citra">Jl. Boulevard Utama Blok L-1 No. 16 R, Perumahan Citra Raya, Cikupa</string>
    <string name="lockota_ahmad">Jl. Jend. Ahmad Yani No. 9, Kota Tangerang</string>
    <string name="lockota_bandara">Bandara Soekarno-Hatta Terminal 3, Gedung Angkasa Pura II Cengkareng</string>
    <string name="lockota_borobudur">Taman Borobudur II Blok DD No.1,Jl. Borobudur Raya, Perum II, Karawaci</string>
    <string name="lockota_bumi">Pertokoan Bumi Permata Indah Blok R 1 No. 23, Jl. Raden Saleh, Karang Tengah, Ciledug</string>
    <string name="lockota_cbd">Ruko Central Business Dustrict (CBD), Trade Mall and Shopping Arcade, Jl. HOS Cokroaminoto No. 93, Ciledug</string>
    <string name="lockota_cikokol">Ruko Mahkota Mas Blok C No. J4 - J5, Cikokol</string>
    <string name="lockota_ciledug">Jl. HOS. Cokroaminoto No.2, RT.1, Cipadu, Larangan</string>
    <string name="lockota_daan">Jl. Daan Mogot No.62C, Sukarasa, Kec. Tangerang, Kota Tangerang</string>
    <string name="lockota_duta">Ruko Duta Garden Blok A1 No 7A, Jl Husin Sastranegara</string>
    <string name="lockota_gedung">Gedung Manajemen Garuda, Bandara Soekarno-Hatta, Cengkareng</string>
    <string name="lockota_jati">Ruko Sastra Plaza, Jalan Gatot Subroto Blok D. Nomor 63 Jatiuwung Tangerang</string>
    <string name="lockota_kisamaun">Jl. Ki Samaun No. 214</string>
    <string name="lockota_merdeka">Plaza Sinar Merdeka Mas Blok A2 No. 7, Jl. Merdeka No. 53</string>
    <string name="lockota_pinangsia">Ruko Pinangsia Blok A No. 39, Lippo Karawaci</string>
    <string name="lockota_poris">Jl. Poris Paradise Exclusive Blok C2 No. 1</string>
    <string name="lockota_psporis">Ruko Poris Indah Blok A9-C, No.15, Cipondoh Indah, Kec. Cipondoh</string>
    <string name="lockota_selapajang">Gedung Pendataan Kepulangan TKI Selapajang, Jl. Marsekal Surya Dharma, Neglasari, Selapajang</string>
    <string name="lockota_taman">Taman Niaga Soewarna, Lantai Dasar Blok B Lot 1, Bandara International Soekarno Hatta</string>
    <string name="lockota_tangcity">Ruko Business Park Tangerang City Blok A.8 Jl. Jend. Sudirman No. 1</string>
    <string name="loctang_alsut">Jl. Raya Serpong No.71, RT.3/RW.3, Pakulonan, Serpong Utara, Kota Tangerang Selatan</string>
    <string name="loctang_bintaro">Ruko Sentra Menteng, Bintaro Jaya Sektor VII Blok MN 29</string>
    <string name="loctang_bintaro3">Jl. Bintaro Utama 3A Blok D No. 42, Sektor III, Bintaro Jaya</string>
    <string name="loctang_bsd">Ruko Pasar Modern BSD, Sektor Commercial I Blok R No.59, Serpong, Jl. Pahlawan Seribu</string>
    <string name="loctang_bumi">Jl. Gunung Rinjani No.13 Blok R-G, Sektor IV Bumi Serpong Damai</string>
    <string name="loctang_ciputat">Ruko Mutiara Center Ciputat,Jl.Dewi Sartika No. B3, Ciputat</string>
    <string name="loctang_ciputatcenter">Pertokoan Ciputat Center, Jl. Ciputat Raya No. 75</string>
    <string name="loctang_cirendeu">Jl. Cirendeu Raya, Pertokoan Prima Indah No. 10</string>
    <string name="loctang_gading">Ruko Gading Serpong Blok AA4 No. 38, Jl. Boulevard</string>
    <string name="loctang_graha">Graha Karnos, Jl. Ir. H. Juanda No. 39, Ciputat</string>
    <string name="loctang_grahabintaro">Graha Bintaro Jl. Trulek I HG 13 No.18 Bintaro</string>
    <string name="loctang_itc">Ruko ITC BSD No.17, Jl. Pahlawan Seribu, Serpong</string>
    <string name="loctang_jurangmangu">Ruko Pondok Aren, Jl. Raya Ceger No.59, Jurangmangu</string>
    <string name="loctang_mall">Mall Alam Sutera Unit LG 05 Jl. Sutera Barat Kav.16, Pakulonan, Serpong Utara, Panunggangan Tim., Pinang</string>
    <string name="loctang_pamsil">Ruko Tita, Jl. Raya Siliwangi No. 9 A, Pamulang</string>
    <string name="loctang_pamulang">Komplek Pertokoan Pamulang Permai Blok SH IX Kav. 11</string>
    <string name="loctang_paris">Komplek Ruko Paris Square KOM III Blok B2 Nomor 11, Jl Letnan Sutopo, BSD</string>
    <string name="callkota_jati">(021) 55658116</string>
    <string name="publish_date">Senin - Jumat 08.00 - 15.00</string>
</resources>